--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <main>
       <!-- Complete the Exercises HERE -->
     </main>
+    <footer>
+      <p>This is my footer for learning</p>
+    </footer>
   </body>
 </html>
